--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/sign-in.css">
 <h1>Sign In</h1>
 
 <form action="/users/create-session" method="POST">
@@ -6,6 +7,8 @@
     <input type="submit" value="Sign In">
 
 </form>
+
+<button id="forgot-btn"><a href="/users/forgot_password">Forgot Password</a></button>
 
 <p>
     <a href="/users/auth/google">Google Sign In/Sign Up</a>
