--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,10 +1,33 @@
 #home-container {
   display: flex; }
-  #home-container #feed-posts {
-    width: 70%;
-    padding: 10px; }
-  #home-container #user-friends {
-    width: 30%;
+  #home-container #posts-list-container #username {
+    font-family: sans-serif;
+    font-size: 12px; }
+  #home-container #request-friend {
+    width: 20%;
     padding: 10px;
-    border-left: 1px solid lightgrey;
-    height: 100%; }
+    border-left: 1px solid grey; }
+  #home-container #feed-posts {
+    width: 50%;
+    padding: 10px; }
+  #home-container #feed-user-friends {
+    display: flex;
+    width: 30%;
+    height: auto;
+    flex-direction: column; }
+    #home-container #feed-user-friends #friends-feed {
+      position: relative;
+      margin-left: 33px;
+      width: 100%;
+      padding: 10px;
+      border-left: 1px solid lightgrey;
+      height: auto; }
+    #home-container #feed-user-friends #user-friends {
+      position: relative;
+      border-top: 1px solid black;
+      margin-left: 33px;
+      width: 100%;
+      padding: 10px;
+      border-left: 1px solid lightgrey;
+      height: 100%;
+      overflow-y: 10px; }
