--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href="/css/chatBox.css">
 
 <div id="home-container">
     <section id="feed-posts">
@@ -20,19 +21,59 @@
                 </ul>
             </div>
         </section>
-        
-        
-        <section id="user-friends">
-            <h4>Friends</h4>
-            <% for(u of all_users){%>
-                <p>
-                    <a href="/users/profile/<%= u.id %>"><%= u.name %></a>
-                </p>
-            <% } %>
+        <section id="request-friend">
+                <h4>Friend Request</h4>
+                <% if(locals.user){ %>
+                    <% for(f of friends){ %>
+                    
+                       <li><%= f.from_user.name %></li>
+                        
+                     <%} %>
+
+                    
+                <% } %>
         </section>
+        
+        <section id="feed-user-friends">
+            <section id="friends-feed">
+                <h4>Friends</h4>
+            </section>
+            <section id="user-friends">
+                <h4>Codeial Users</h4>
+                <% for(u of all_users){%>
+                    <p>
+                        <a href="/users/profile/<%= u.id %>">
+                            <%= u.name %>
+                        </a>
+                    </p>
+                    <% } %>
+            </section>
+        </section>
+        
+            <%- include('_chatBox') -%>
+        
+        
 </div>
 
 <!-- importing this script for creating the comments -->
 <script src="/js/home_post_comments.js" ></script>
 <script src="/js/home_posts.js"></script>
 
+<!-- *CHANGE :: import the script file for toggle likes, also run it over for the already present posts and comments on the page -->
+
+<script src="js/toggle_likes.js"></script>
+<script>
+    $('.toggle-like-button').each(function () {
+        let self = this;
+        let toggleLike = new ToggleLike(self);
+    });
+</script>
+
+<!-- *This Is For Chat Socket Io And Js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+<script src="/js/chat_engine.js"></script>
+<% if (locals.user){ %>
+    <script>
+        new ChatEngine('user-chat-box', '<%= locals.user.email %>')
+    </script>
+<% } %>
