--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
         <title>
             <%= title  %>
         </title>
+        <script src="https://kit.fontawesome.com/9916772047.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
 
